<?xml version="1.0"?>
<package>
  <name>motor_controller</name>
  <version>0.0.0</version>
  <description>The ras_lab1_motor_controller package</description>


  <maintainer email="ras@todo.todo">ras</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>

  </export>
</package>
